--- a/css/nft-style.css
+++ b/css/nft-style.css
@@ -75,6 +75,18 @@ html {
   text-decoration: none;
 }
 
+.audioButton {
+  left: 0;
+  bottom: 0;
+  z-index: 200;
+  margin: 0.5rem;
+  padding: 0.25rem 0.5rem;
+
+  font-size: 0.75rem;
+  color: inherit;
+  text-decoration: none;
+}
+
 #app {
   position: fixed;
   top: 0;
