--- a/css/nft-style.css
+++ b/css/nft-style.css
@@ -76,8 +76,8 @@ html {
 }
 
 .audioButton {
-  left: 0;
-  bottom: 0;
+  right: 0;
+  top: 0;
   z-index: 200;
   margin: 0.5rem;
   padding: 0.25rem 0.5rem;
